--- a/(PROGCOM_B)ALEJANDRO_QUIROGA_11FRBCLASE.ipynb
+++ b/(PROGCOM_B)ALEJANDRO_QUIROGA_11FRBCLASE.ipynb
@@ -291,7 +291,7 @@
         "id": "FWQIIefGEK8C",
         "outputId": "8675b2d6-4fa2-4d72-c700-5da96edc234c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,6 +412,197 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "11. Escribe un programa que calcule el índice de masa corporal (IMC) y determine la categoría (bajo peso, normal, sobrepeso, obesidad). Al final, el programa debe imprimir: el nombre del usuario, su categoría y una breve descripción de lo que debe hacer de acuerdo a su categoría."
+      ],
+      "metadata": {
+        "id": "tcfHDIx_lNgl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "print(\"¡Bienvenido al programa de cálculo de IMC!\")\n",
+        "while True:"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DzYEhSB0lSDs",
+        "outputId": "3cf6a19d-e4cf-4b7d-dc52-59258408fd68"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¡Bienvenido al programa de cálculo de IMC!\n",
+            "Ingresa tu peso en kg: 95\n",
+            "Ingresa tu altura en metros: 1.78\n",
+            "\n",
+            "Tu IMC es 29.98.\n",
+            "Categoría: Obesidad\n",
+            "Te recomendamos que consultes a un médico para crear un plan de acción para reducir el peso.\n",
+            "\n",
+            "¿Quieres calcular otro IMC? (sí/no): no\n",
+            "Gracias por usar el programa. ¡Cuídate!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "12. Desarrolla un programa que simule una calculadora simple (+, -, *, /) con dos números"
+      ],
+      "metadata": {
+        "id": "qhOcAN6DnvRm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"¡Bienvenido a la calculadora simple!\")\n",
+        "while True:\n",
+        "    num1 = int(input(\"Ingresa el primer número: \"))\n",
+        "    num2 = int(input(\"Ingresa el segundo número: \"))\n",
+        "    print(\"Operaciones disponibles:\")\n",
+        "    print(\"1. Suma (+)\")\n",
+        "    print(\"2. Resta (-)\")\n",
+        "    print(\"3. Multiplicación (*)\")\n",
+        "    print(\"4. División (/)\")\n",
+        "    operacion = input(\"Elige una operación (1/2/3/4): \")\n",
+        "    if operacion == '1':\n",
+        "        resultado = num1 + num2\n",
+        "        print(f\"El resultado de {num1} + {num2} es: {resultado}\")\n",
+        "    elif operacion == '2':\n",
+        "        resultado = num1 - num2\n",
+        "        print(f\"El resultado de {num1} - {num2} es: {resultado}\")\n",
+        "    elif operacion == '3':\n",
+        "        resultado = num1 * num2\n",
+        "        print(f\"El resultado de {num1} * {num2} es: {resultado}\")\n",
+        "    elif operacion == '4':\n",
+        "        if num2 != 0:\n",
+        "            resultado = num1 // num2\n",
+        "            print(f\"El resultado de {num1} / {num2} es: {resultado}\")\n",
+        "        else:\n",
+        "            print(\"¡Error! No se puede dividir entre cero.\")\n",
+        "    else:\n",
+        "        print(\"Opción no válida, por favor ingresa una opción entre 1 y 4.\")\n",
+        "    continuar = input(\"\\n¿Quieres realizar otra operación? (sí/no): \")\n",
+        "    if continuar == 'no' or continuar == 'NO':\n",
+        "        print(\"Gracias por usar la calculadora. ¡Hasta luego!\")\n",
+        "        break\n",
+        "    elif continuar != 'sí' and continuar != 'SI':\n",
+        "        print(\"Opción no válida, por favor ingresa 'sí' o 'no'.\")"
+      ],
+      "metadata": {
+        "id": "Me97oS9anvhj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "14. Escribe un programa que determine el día de la semana según un número (1-7)."
+      ],
+      "metadata": {
+        "id": "3Xi-FXTCoVC7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"¡Bienvenido al programa que determina el día de la semana!\")\n",
+        "while True:\n",
+        "    dia_numero = int(input(\"Ingresa un número entre 1 y 7 para saber el día de la semana: \"))\n",
+        "    if dia_numero == 1:\n",
+        "        dia = \"Lunes\"\n",
+        "    elif dia_numero == 2:\n",
+        "        dia = \"Martes\"\n",
+        "    elif dia_numero == 3:\n",
+        "        dia = \"Miércoles\"\n",
+        "    elif dia_numero == 4:\n",
+        "        dia = \"Jueves\"\n",
+        "    elif dia_numero == 5:\n",
+        "        dia = \"Viernes\"\n",
+        "    elif dia_numero == 6:\n",
+        "        dia = \"Sábado\"\n",
+        "    elif dia_numero == 7:\n",
+        "        dia = \"Domingo\"\n",
+        "    else:\n",
+        "        print(\"Número inválido. Por favor ingresa un número entre 1 y 7.\")\n",
+        "        continue\n",
+        "    print(f\"El día correspondiente al número {dia_numero} es: {dia}\")"
+      ],
+      "metadata": {
+        "id": "TWCzU_oloXXO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "16. Crea un programa que muestre la tabla de multiplicar de un número hasta el 10."
+      ],
+      "metadata": {
+        "id": "GfRguRULo5-7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"¡Bienvenido al programa que muestra la tabla de multiplicar de un número!\")\n",
+        "numero = int(input(\"Ingresa un número para ver su tabla de multiplicar: \"))\n",
+        "print(f\"\\nTabla de multiplicar del {numero}:\")\n",
+        "for i in range(1, 11):\n",
+        "    resultado = numero * i\n",
+        "    print(f\"{numero} x {i} = {resultado}\")\n",
+        "continuar = input(\"\\n¿Quieres ver otra tabla? (sí/no): \")\n",
+        "if continuar == 'no' or continuar == 'NO':\n",
+        "    print(\"Gracias por usar el programa. ¡Hasta luego!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vS3Kmp1GqOBq",
+        "outputId": "77ac7403-6d32-442f-8374-38c49fd7d845"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¡Bienvenido al programa que muestra la tabla de multiplicar de un número!\n",
+            "Ingresa un número para ver su tabla de multiplicar: 5\n",
+            "\n",
+            "Tabla de multiplicar del 5:\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n",
+            "\n",
+            "¿Quieres ver otra tabla? (sí/no): no\n",
+            "Gracias por usar el programa. ¡Hasta luego!\n"
+          ]
+        }
+      ]
     }
   ]
 }
