--- a/(PROGCOM_B)ALEJANDRO_QUIROGA_11FRBCLASE.ipynb
+++ b/(PROGCOM_B)ALEJANDRO_QUIROGA_11FRBCLASE.ipynb
@@ -425,36 +425,61 @@
     {
       "cell_type": "code",
       "source": [
-        "import math\n",
-        "print(\"¡Bienvenido al programa de cálculo de IMC!\")\n",
-        "while True:"
+        "for IMC in range(1,3):\n",
+        "  N=(input(print(\"Ingrese su nombre\")))\n",
+        "  P=int(input(print(\"Ingrese su peso en Kg\")))\n",
+        "  E=float(input(print(\"Ingrese su estatura en metros\")))\n",
+        "  IMC=P/(E**2)\n",
+        "  if IMC<=18.5:\n",
+        "    print(f\"{N} Usted esta en un peso bajo, su IMC es de {IMC}\")\n",
+        "  if IMC>=18.5 and IMC<=24.9:\n",
+        "    print(f\"{N} Usted esta en un peso normal, su IMC es de {IMC}\")\n",
+        "  if IMC>=25 and IMC<=29.9:\n",
+        "    print(f\"{N} Usted esta en sobrepeso, su IMC es de {IMC}\")\n",
+        "  if IMC>=30:\n",
+        "    print(f\"{N} Usted esta en obesidad, su IMC es de {IMC}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DzYEhSB0lSDs",
-        "outputId": "3cf6a19d-e4cf-4b7d-dc52-59258408fd68"
+        "outputId": "d0898466-61f9-428f-8953-5f16cbbfcd74"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "¡Bienvenido al programa de cálculo de IMC!\n",
-            "Ingresa tu peso en kg: 95\n",
-            "Ingresa tu altura en metros: 1.78\n",
-            "\n",
-            "Tu IMC es 29.98.\n",
-            "Categoría: Obesidad\n",
-            "Te recomendamos que consultes a un médico para crear un plan de acción para reducir el peso.\n",
-            "\n",
-            "¿Quieres calcular otro IMC? (sí/no): no\n",
-            "Gracias por usar el programa. ¡Cuídate!\n"
+            "Ingrese su nombre\n",
+            "NoneAlejandro\n",
+            "Ingrese su peso en Kg\n",
+            "None94\n",
+            "Ingrese su estatura en metros\n",
+            "None177\n",
+            "Alejandro Usted esta en un peso bajo, su IMC es de 0.0030004149510038623\n",
+            "Ingrese su nombre\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def IMC():\n",
+        "  while True:\n",
+        "    nombre = input(print(\"Ingrese su nombre: \"))\n",
+        "    peso = float(input(print(\"Ingrese su peso en kg: \")))\n",
+        "    estatura = float(input(print(\"Ingrese su estatura en metros: \")))\n",
+        "    imc = peso / (estatura ** 2)\n",
+        "  else: print('Error')"
+      ],
+      "metadata": {
+        "id": "DPZb_CxCZJYM"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -511,6 +536,45 @@
     {
       "cell_type": "markdown",
       "source": [
+        "13. Crea un programa que determine la calificación en letras (A, B, C, D, F) según una nota numérica (0-100)."
+      ],
+      "metadata": {
+        "id": "a0ThafNHZQIc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calificación():\n",
+        "  while True:\n",
+        "    C1=input(print(\"Ingrese su nota\"))\n",
+        "  if C1==\"A\":\n",
+        "    print(\"Su nota es:\")\n",
+        "    print(\"100\")\n",
+        "  elif C1==\"B\":\n",
+        "    print(\"Su nota es:\")\n",
+        "    print(\"80\")\n",
+        "  elif C1==\"C\":\n",
+        "    print(\"Su nota es:\")\n",
+        "    print(\"60\")\n",
+        "  elif C1==\"D\":\n",
+        "    print(\"Su nota es:\")\n",
+        "    print(\"40\")\n",
+        "  elif C1==\"F\":\n",
+        "    print(\"Su nota es:\")\n",
+        "    print(\"20\")\n",
+        "  else:\n",
+        "    print(\"Error\")"
+      ],
+      "metadata": {
+        "id": "eY-EQ1OMZS7N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "14. Escribe un programa que determine el día de la semana según un número (1-7)."
       ],
       "metadata": {
@@ -551,6 +615,68 @@
     {
       "cell_type": "markdown",
       "source": [
+        "15. Desarrolla un programa que valide si tres números pueden formar un triángulo y de qué tipo es"
+      ],
+      "metadata": {
+        "id": "M6W2Gf3hztl2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for Triangulo in range(1,4):\n",
+        "  L1=int(input(print(\"Ingrese un lado del triangulo en metros\")))\n",
+        "  L2=int(input(print(\"Ingrese un lado del triangulo en metros\")))\n",
+        "  L3=int(input(print(\"Ingrese un lado del triangulo en metros\")))\n",
+        "  if (L1+L2>=L3) and (L2+L3>=L1) and (L3+L1>=L2):\n",
+        "    print(\"El triangulo es valido\")\n",
+        "    if L1==L2 and L2==L3:\n",
+        "      print(\"El triangulo es equilatero\")\n",
+        "    elif L1==L2 or L2==L3 or L1==L3:\n",
+        "      print(\"El triangulo es isoceles\")\n",
+        "    else:\n",
+        "     print(\"El triangulo es escaleno\")\n",
+        "  else:\n",
+        "    print(\"El triangulo no es valido\")\n",
+        "\n",
+        "\n",
+        "def T():\n",
+        " while L1 >= 0:\n",
+        "   L1 = int(input(\"Ingresa el primer lado: \"))\n",
+        "   if L1 <= 0:\n",
+        "    print(\"El lado debe ser mayor a 0\")\n",
+        "\n",
+        "   while L2 >= 0:\n",
+        "    L2 = int(input(\"Ingresa el segundo lado: \"))\n",
+        "    if L2 <= 0:\n",
+        "     print(\"El lado debe ser mayor a 0\")\n",
+        "\n",
+        "    while L3 >= 0:\n",
+        "     L3 = int(input(\"Ingresa el tercer lado: \"))\n",
+        "    if L3 <= 0:\n",
+        "     print(\"El lado debe ser mayor a 0\")\n",
+        "\n",
+        "   if(L1 + L2 > L3  and L1 + L3 > L2 and L2 + L3 > L1):\n",
+        "    print(\"Se puede formar un triangulo\")\n",
+        "    if(L1 == L2 and L2 == L3):\n",
+        "      print(\"El triangulo es equilatero\")\n",
+        "    elif(L1 == L2 or L1 == L3 or L2 == L3):\n",
+        "      print(\"El triangulo es isoceles\")\n",
+        "    else:\n",
+        "      print(\"El triangulo es escaleno\")\n",
+        " else:\n",
+        "   print(\"No se puede formar un triangulo\")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "KsXpsMfuzt_O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "16. Crea un programa que muestre la tabla de multiplicar de un número hasta el 10."
       ],
       "metadata": {
@@ -577,7 +703,7 @@
         "id": "vS3Kmp1GqOBq",
         "outputId": "77ac7403-6d32-442f-8374-38c49fd7d845"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,6 +729,108 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "17. Escribe un programa que calcule la suma de números naturales hasta n."
+      ],
+      "metadata": {
+        "id": "12GhAYDS0fL4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def suma(n):\n",
+        "\n",
+        " while True:\n",
+        "        n = int(input(\"Que cantidad de veces quiere sumar los numeros?\"))\n",
+        "        n1 = int(input(\"Ingresa un número entero positivo: \"))\n",
+        "        n2 = int(input(\"Ingresa el segundo número entero positivo: \"))\n",
+        "        if n1 < 0 and n2 < 0:\n",
+        "            print(\"Error\")\n",
+        "        else:\n",
+        "            print(f'la suma de los numeros es {(n1+n2)*n}')\n",
+        "            break"
+      ],
+      "metadata": {
+        "id": "tkzKyj9B0pR-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for N in range (1,3):\n",
+        "  n=int(input(print(\"Que cantidad de veces quiere sumar los numeros?\")))\n",
+        "  n1=int(input(print(\"Ingrese un número\")))\n",
+        "  n2=int(input(print(\"Ingrese un número\")))\n",
+        "  if n1<0 and n2<0:\n",
+        "    print(\"Error\")\n",
+        "  else:\n",
+        "    print(f'la suma de los numeros es {((n1+n2)*n)}')"
+      ],
+      "metadata": {
+        "id": "NQ0uJG1N0qDY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "20. Escribe un programa que adivine entre un conjunto de diez colores definidos por el usuario, con un máximo de 10 intentos."
+      ],
+      "metadata": {
+        "id": "rXMLSz3p0tLP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def color():\n",
+        "  colores = [\"Azul\", \"Amarillo\", \"Rojo\", \"Verde\", \"Naranja\", \"Morado\", \"Blanco\", \"Negro\"]\n",
+        "  print(\"Los colores a adivinar son: Azul, Amarillo, Rojo, Verde, Naranja, Morado, Blanco, Negro]\")\n",
+        "  random.choice(colores)\n",
+        "  for i in range (0,9):\n",
+        "    C1=input(\"Adivina el color:\")\n",
+        "    if C1==random.choice(colores):\n",
+        "      print(\"Correcto\")\n",
+        "    else:\n",
+        "      print(\"Incorrecto\")"
+      ],
+      "metadata": {
+        "id": "fEXTZS7k3xqw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "colores = [\"Azul\", \"Amarillo\", \"Rojo\", \"Verde\", \"Naranja\", \"Morado\", \"Blanco\", \"Negro\"]\n",
+        "print(\"Los colores a adivinar son: Azul, Amarillo, Rojo, Verde, Naranja, Morado, Blanco, Negro\")\n",
+        "color_adivinar = random.choice(colores)\n",
+        "intentos = 0\n",
+        "C=print(\"Adivida el color:Azul, Amarillo, Rojo, Verde, Naranja, Morado, Blanco, Negro\")\n",
+        "while intentos < 10:\n",
+        "    C1 = input(\"Ingrese un color: \")\n",
+        "    if C1 == color_adivinar:\n",
+        "        print(\"Correcto\")\n",
+        "        break\n",
+        "    else:\n",
+        "         print(\"Incorrecto\")\n",
+        "    intentos += 1"
+      ],
+      "metadata": {
+        "id": "Vfz8UW_N3z4A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
